Initial commit: 학생 설문 분석 MCP 프로젝트

--- a/.gitignore
+++ b/.gitignore
@@ -31,10 +31,16 @@ ENV/
 *.swp
 *.swo
 
-# Credentials and sensitive data
-*.json
+# Google API credentials
+credentials.json
+*.json.key
+
+# Environment variables
 .env
-token.pickle
+.env.local
+
+# Streamlit
+.streamlit/
 
 # OS
 .DS_Store
