--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-google-api-python-client==2.108.0
-google-auth-httplib2==0.1.1
-google-auth-oauthlib==1.1.0
-pandas==2.1.3
-matplotlib==3.8.2
-seaborn==0.13.0
-streamlit==1.29.0 
+streamlit==1.32.0
+pandas==2.2.1
+matplotlib==3.8.3
+seaborn==0.13.2
+google-api-python-client==2.118.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+numpy==1.26.4 
